# universal-restrictor

./: .dockerignore  .env.example  .gitignore  .gitignore.bak  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  grafana-dashboard-v2.json  prometheus.yml  pyproject.toml  requirements-ci.txt  requirements-core.txt  requirements-dev.txt  requirements.txt  run.sh  test_api.py
.github/workflows/: ci.yml
dashboard/: index.html  package-lock.json  package.json  standalone.html  tailwind.config.js
dashboard/public/: index.html
dashboard/src/: App.js  App.tsx  index.css
data/: feedback.json
data/collection/: add_hindi_samples.py  annotate_hindi_youtube.py  annotate_with_claude.py  clean_data_v2.py  combine_and_analyze.py  create_final_dataset.py  diagnose_data.py  final_summary.py  needs_annotation.jsonl  quality_check.py  reddit_scraper.py  reddit_scraper_v2.py  smart_quality_fix.py  youtube_hindi_annotated.jsonl  youtube_hindi_scraper.py  youtube_scraper.py
data/datasets/: analyze_moe_data.py  combine_and_balance.py  deep_analysis.py  download.py  download_comprehensive.py  download_hindi.py  download_weak_categories.py  download_weak_v2.py  examples_to_label.py  generate_more.py  labeling_tool.py  merge_augmented.py  merge_categories.py  more_hindi.py  prepare_comprehensive.py  prepare_training.py  quick_labeler.py  split_by_category.py
data/gold/: gold_v1.jsonl
data/policy/: policy_v1.md  schema_v1.md
data/training/: train_colab.ipynb  train_colab_v2.ipynb  train_moe_2stage.ipynb  train_moe_2stage_muril.ipynb  train_moe_colab.ipynb  train_moe_v2.ipynb  train_moe_v3_balanced.ipynb  train_moe_v3_curated.ipynb  train_moe_v3_highrecall.ipynb
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  FEEDBACK_LOOP_ARCHITECTURE.md
grafana/dashboards/: restrictor-dashboard.json
helm/universal-restrictor/: Chart.yaml  README.md  values.yaml
infrastructure/slos/: slo_definitions.md
restrictor/: __init__.py  engine.py  models.py
restrictor/api/: __init__.py  dashboard_routes.py  feedback_routes.py  logging_config.py  metrics.py  middleware.py  server.py
restrictor/detectors/: __init__.py  claude_detector.py  custom_toxicity.py  escalation_classifier.py  finance_intent.py  (+7 more)
tests/: conftest.py  test_api.py  test_llm_required.py  test_regex_only.py  test_restrictor.py  test_sentences.py
(+61 files in other folders)
